--- a/src/assets/style/common.css
+++ b/src/assets/style/common.css
@@ -56,6 +56,10 @@ body {
   -webkit-text-size-adjust: 100%;
 }
 
+#app {
+  padding-top: 30px;
+}
+
 /* 添加全局滚动条样式 */
 ::-webkit-scrollbar {
   display: none; /* Chrome Safari */
