--- a/src/assets/style/common.css
+++ b/src/assets/style/common.css
@@ -1,4 +1,6 @@
-@import 'tailwindcss';
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
